<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cassowary Layout Demo</string>
    <string name="programmatic_demo">Programmatic demo</string>
    <string name="xml_layout_demo">XML layout demo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_programmatic_demo">ProgrammaticDemo</string>
    <string name="title_activity_xml_layout_demo">XmlLayoutDemo</string>
    <string name="title_activity_center_view_relative_to_sibling">CenterViewRelativeToSibling</string>
    <string name="center_view_relative_to_sibling">Center view relative to sibling</string>
    <string name="title_activity_center_in_parent">CenterInParent</string>
    <string name="center_in_parent">Center In Parent</string>
    <string name="dynamic_width">Dynamic width</string>
    <string name="parallax_scrolling">Parallax scrolling (custom constraint)</string>
    <string name="title_activity_cassowary_layout_in_linear_layout">CassowaryLayoutInLinearLayout</string>
    <string name="cassowary_layout_in_linear_layout">CassowaryLayout In LinearLayout</string>
    <string name="title_activity_cassowary_layout_wrap_content">CassowaryLayoutWrapContent</string>
    <string name="title_activity_cassowary_layout_match_parent">CassowaryLayoutMatchParent</string>
    <string name="text_view_in_linear_layout">Text view in linear layout</string>
    <string name="cassowary_layout_match_parent">Cassowary Layout Match Parent</string>
    <string name="cassowary_layout_wrap_content">Cassowary Layout Wrap Content</string>
    <string name="title_activity_dynamic_width">DynamicWidth</string>
    <string name="drag_me">Drag me</string>
    <string name="title_activity_linear_layout_in_cassowary_layout">LinearLayoutInCassowaryLayout</string>
    <string name="linear_layout_in_cassowary_layout">Linear Layout In Cassowary Layout</string>
    <string name="intrinsic_height_text_in_wrap_content_container">Intrinsic height text in wrap content container</string>
    <string name="cassowary_layouts_in_cassowary_layout">Cassowary Layouts in Cassowary Layout</string>
    <string name="chess_board">Chess board</string>
    <string name="cassowary_layouts_in_list_view">Cassowary Layouts In List View</string>
    <string name="pre_setup_test_activity">Pre setup test activity</string>
    <string name="fixed_aspect_ratio_test_activity">Fixed aspect ratio test activity</string>
    <string name="long_paragraph">This is a paragraph of text. This is a paragraph of text. This is a paragraph of text. This is a paragraph of text. This is a paragraph of text.</string>
    <string name="headline">This is a headline with seven words</string>
    <string name="text_in_cassowary_layout">Text in Cassowary Layout</string>
    <string name="text_in_linear_layout">Text in Linear Layout</string>
    <string name="title_activity_intrinsic_height_text_in_wrap_content_container">IntrinsicHeightTextInWrapContentContainer</string>
    <string name="title_activity_parallax_scrolling">ParallaxScrolling</string>
    <string name="title_activity_chess_board">ChessBoard</string>
    <string name="title_activity_cassowary_layouts_in_cassowary_layout">CassowaryLayoutsInCassowaryLayout</string>
    <string name="title_activity_cassowary_layouts_in_list_view">CassowaryLayoutsInListViewActivity</string>
    <string name="title_activity_pre_setup_test">PreSetupTestActivity</string>
    <string name="wrap_content">WRAP_CONTENT</string>
    <string name="match_parent">MATCH_PARENT</string>
    <string name="height">height</string>
    <string name="width">width</string>
    <string name="set_ratio">Set ratio</string>
    <string name="enter_ratio">Enter ratio</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_fixed_aspect_ratio_demo">FixedAspectRatioDemoActivity</string>
    <string name="fixed_aspect_ratio_explanation_text">If aspectRatioFixed is set to true, the width height ratio of the layout is fixed; The Cassowary constraints have no influence on the size of the container.</string>
    <string name="cropped_content_explanation">Content that does not fit into the container will be cropped</string>
    <string name="cropped_text">This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. This is a long text that may be cropped depending how much screen real estate is available. </string>
    <string name="example_date">27 April 2015</string>
    <string name="new_string">New</string>
    <string name="the_sun">The sun</string>
    <string name="the_earth">The earth</string>

</resources>
