<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cassowary="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <no.agens.cassowarylayout.CassowaryLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        cassowary:constraints="@array/constraints_example_menu"
        tools:context="no.agens.cassowarylayoutdemo.XmlLayoutDemo"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/programmatic_demo"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programmatic_demo" />

        <TextView
            android:id="@+id/xml_layout_demo"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_layout_demo" />

        <TextView
            android:id="@+id/center_view_relative_to_sibling"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center_view_relative_to_sibling" />

        <TextView
            android:id="@+id/center_in_parent"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center_in_parent" />

        <TextView
            android:id="@+id/dynamic_width"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dynamic_width" />

        <TextView
            android:id="@+id/parallax_scrolling"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parallax_scrolling" />

        <TextView
            android:id="@+id/cassowary_layout_in_linear_layout"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cassowary_layout_in_linear_layout" />

        <TextView
            android:id="@+id/cassowary_layout_match_parent"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cassowary_layout_match_parent" />

        <TextView
            android:id="@+id/cassowary_layout_wrap_content"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cassowary_layout_wrap_content" />

        <TextView
            android:id="@+id/linear_layout_in_cassowary_layout"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linear_layout_in_cassowary_layout" />


        <TextView
            android:id="@+id/intrinsic_height_text_in_wrap_content_container"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intrinsic_height_text_in_wrap_content_container" />

        <TextView
            android:id="@+id/cassowary_layouts_in_cassowary_layout"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cassowary_layouts_in_cassowary_layout" />

        <TextView
            android:id="@+id/chess_board"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chess_board" />

    </no.agens.cassowarylayout.CassowaryLayout>
</ScrollView>